--- a/vault.html
+++ b/vault.html
@@ -88,7 +88,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Content\wand.jpg" width="375" height="475" alt="Wand of Web">
+            <img src="Content\Wand.jpg" width="375" height="475" alt="Wand of Web">
             <div class="card-body">
               <p><strong>Wand of Web</strong></p>
             </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Content\sword.jpg" width="375" height="475" alt="Fiery Sword">
+            <img src="Content\Sword.jpg" width="375" height="475" alt="Fiery Sword">
             <div class="card-body">
               <p><strong>The Blazing Balde of Dhul'Khan</strong></p>
             </div>
