--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2>Our People</h2>
         <p>The Quester Council is made up of some of the bravest heroes and wisest mages in all the land, and we have decided to share our vast experience and talents with you all, from the newest, greenest hopefull to the grizzled veterans looking for the next big score. The team at
          Quester works day and night, across multiple dimensions, and even is known for bending reality to provide you with the best experience possible.</p>
-        <p><a class="btn btn-secondary" href="Council.jpg">Meet the Team &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="council.html">Meet the Team &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Content\Promise.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Handshake">
